--- a/css/main.css
+++ b/css/main.css
@@ -186,13 +186,20 @@ body {
 
 .modal {
   position: absolute;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: var(--white-color);
   border-radius: 4px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal__close-button {
@@ -216,15 +223,30 @@ body {
 
 .modal-form__head {
   font-size: 20px;
-  line-height: 1.17;
+  line-height: 1.5;
   letter-spacing: 0.03em;
   font-weight: 700;
   text-align: center;
   margin-bottom: 12px;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-form__head {
+    line-height: 1.17;
+  }
+}
+
 .modal-form__field {
+  font-size: 12px;
+  letter-spacing: 0.01em;
   margin-bottom: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__field {
+    font-size: 14px;
+    letter-spacing: 0.03em;
+  }
 }
 
 .modal-form__input {
@@ -264,6 +286,14 @@ body {
   padding-left: 20px;
   text-align: center;
   margin-bottom: 30px;
+  font-size: 12px;
+}
+
+@media screen and (min-width: 1200px) {
+  .check {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .check_input {
@@ -286,9 +316,16 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   margin-left: -20px;
+  margin-top: -2px;
   position: absolute;
   width: 16px;
   height: 15px;
+}
+
+@media screen and (min-width: 1200px) {
+  .check_box {
+    margin-top: 3px;
+  }
 }
 
 .check_input:focus + .check_box {
@@ -346,8 +383,111 @@ body {
   }
 }
 
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  overflow: auto;
+  z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu_container {
+  position: relative;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.mobile-menu_nav {
+  padding-left: 25px;
+}
+
+.mobile-menu_close-btn {
+  position: absolute;
+  top: 21px;
+  right: 25px;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
+
+.mobile-menu_icon {
+  width: 19px;
+  height: 19px;
+}
+
+.mobile-menu_item {
+  margin-bottom: 32px;
+}
+
+.mobile-menu_link {
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  font-family: var(--main-font);
+  color: var(--body-color);
+}
+
+.mobile-menu_link:hover, .mobile-menu_link:focus {
+  color: var(--accent-color);
+}
+
+.mobile-menu_contact {
+  padding-left: 25px;
+  margin-top: 305px;
+  margin-bottom: 64px;
+}
+
+.mobile-menu_contact-link {
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  font-family: var(--main-font);
+  color: var(--accent-color);
+}
+
+.mail {
+  font-size: 24px;
+  color: var(--secondary-color);
+}
+
+.mobile-social-list {
+  display: flex;
+  margin-top: 64px;
+  margin-left: 25px;
+}
+
+.mobile-social-link:not(:last-child) {
+  margin-right: 10px;
+}
+
+.mobile-social-link_icon {
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  font-family: var(--main-font);
+  color: var(--accent-color);
+}
+
 .header-container {
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -466,7 +606,24 @@ body {
   letter-spacing: 0.02em;
   font-weight: 500;
   font-family: var(--main-font);
-  color: var(--secondary-color);
+  color: var(--body-color);
+}
+
+.header-burger {
+  background-color: transparent;
+  padding: 0;
+  border: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header-burger {
+    display: none;
+  }
+}
+
+.header-burger_icon {
+  width: 24px;
+  height: 16px;
 }
 
 .contact {
@@ -574,7 +731,7 @@ body {
   text-align: center;
   padding-top: 118px;
   padding-bottom: 118px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero/mobile.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/mobile.jpg);
   background-repeat: no-repeat;
   max-width: 767px;
   margin: auto;
@@ -584,20 +741,20 @@ body {
 
 @media (min-device-pixel-ratio: 2) and (max-width: 767px), (min-resolution: 192dpi) and (max-width: 767px), (min-resolution: 2dppx) and (max-width: 767px) {
   .hero {
-    background-image: url("/images/hero/mobile@2x.jpg");
+    background-image: url("../images/hero/mobile@2x.jpg");
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 1199px;
-    background-image: url("/images/hero/tablet.jpg");
+    background-image: url("../images/hero/tablet.jpg");
   }
 }
 
 @media (min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px), (min-resolution: 2dppx) and (min-width: 768px) {
   .hero {
-    background-image: url("/images/hero/tablet@2x.jpg");
+    background-image: url("../images/hero/tablet@2x.jpg");
   }
 }
 
@@ -605,7 +762,7 @@ body {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url("/images/hero/desktop.jpg");
+    background-image: url("../images/hero/desktop.jpg");
     max-width: 1600px;
     margin: auto;
   }
@@ -613,7 +770,7 @@ body {
 
 @media (min-device-pixel-ratio: 2) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
-    background-image: url("/images/hero/desktop@2x.jpg");
+    background-image: url("../images/hero/desktop@2x.jpg");
   }
 }
 
@@ -838,6 +995,12 @@ body {
   margin: -15px;
 }
 
+@media screen and (min-width: 1200px) {
+  .clients-box {
+    flex-wrap: nowrap;
+  }
+}
+
 .clients-title {
   font-size: 28px;
   line-height: 1.17;
@@ -868,7 +1031,7 @@ body {
 @media screen and (min-width: 1200px) {
   .client {
     flex-wrap: nowrap;
-    flex-basis: auto;
+    flex-basis: 100%;
     margin: 15px;
   }
 }
@@ -926,6 +1089,13 @@ body {
 
 .logo-address {
   margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-address {
+    text-align: left;
+    margin-bottom: 0;
+  }
 }
 
 .address-list__link {
@@ -1244,7 +1414,6 @@ body {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: transparent;
-  flex-wrap: wrap;
 }
 
 .project_title {
