--- a/sass/components/_modai-window.scss
+++ b/sass/components/_modai-window.scss
@@ -1,12 +1,18 @@
 .modal {
   position: absolute;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: var(--white-color);
   border-radius: 4px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 .modal__close-button {
   @include border(1px solid rgba(0, 0, 0, 0.1), 50%);
