--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -4,12 +4,25 @@
   padding: 40px;
 }
 .modal-form__head {
-  @include font(20px, 1.17);
+  @include font(20px, 1.5);
   text-align: center;
   margin-bottom: 12px;
 }
+@media screen and (min-width: 1200px) {
+  .modal-form__head {
+    line-height: 1.17;
+  }
+}
 .modal-form__field {
+  font-size: 12px;
+  letter-spacing: 0.01em;
   margin-bottom: 10px;
+}
+@media screen and (min-width: 1200px) {
+  .modal-form__field {
+    font-size: 14px;
+    letter-spacing: 0.03em;
+  }
 }
 .modal-form__input {
   @include border();
@@ -43,6 +56,13 @@
   padding-left: 20px;
   text-align: center;
   margin-bottom: 30px;
+  font-size: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .check {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .check_input {
   position: absolute;
@@ -61,9 +81,14 @@
   @include border(2px solid var(--body-color), 2px);
   @include transition(transform);
   margin-left: -20px;
+  margin-top: -2px;
   position: absolute;
   width: 16px;
   height: 15px;
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 3px;
+  }
 
   .check_input:focus + & {
     border-color: var(--accent-color);
