--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -4,6 +4,11 @@
   flex-wrap: wrap;
   margin: -15px
 }
+@media screen and (min-width: 1200px) {
+  .clients-box {
+    flex-wrap: nowrap;
+  }
+}
 .clients-title {
   @include font(28px);
   margin-bottom: 30px;
@@ -27,7 +32,7 @@
 @media screen and (min-width: 1200px) {
   .client {
     flex-wrap: nowrap;
-    flex-basis: auto;
+    flex-basis: 100%;
     margin: 15px;
   }
 }
