--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import './components/modai-window';
 @import './components/modal-form';
 @import './components/section-bord';
+@import './components/mobile-menu';
 
 @import './layout/header';
 @import './layout/hero';
