--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -62,6 +62,9 @@
   font-family: var(--main-font);
   color: var(--accent-color);
 }
+.mobile-menu_contact-list:not(:last-child) {
+  margin-bottom: 32px;
+}
 .mail {
   font-size: 24px;
   color: var(--secondary-color);
@@ -73,6 +76,8 @@
 }
 .mobile-social-link:not(:last-child) {
   margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 .mobile-social-link_icon {
   @include font(18px, 1.22, 0.02em, 500);
