--- a/css/main.css
+++ b/css/main.css
@@ -240,6 +240,7 @@ body {
   font-size: 12px;
   letter-spacing: 0.01em;
   margin-bottom: 10px;
+  color: #757575;
 }
 
 @media screen and (min-width: 1200px) {
