--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -17,6 +17,7 @@
   font-size: 12px;
   letter-spacing: 0.01em;
   margin-bottom: 10px;
+  color: rgba(117, 117, 117, 1);
 }
 @media screen and (min-width: 1200px) {
   .modal-form__field {
