--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -19,6 +19,11 @@
     align-items: baseline;
   }
 }
+@media screen and (min-width: 1200px) {
+  .for-tablet {
+    margin-bottom: 0;
+  }
+}
 .logo-address {
   margin-bottom: 60px;
 }
