--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -77,6 +77,10 @@
   .project__list {
     flex-basis: calc((100% - 2 * 30) / 2);
     margin: 15px;
+
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
   }
 }
 .project__link {
